maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: not found: value X
  force(0,X,Y)
          ^ShortestPathMaze:26: error: not found: value Y
  force(0,X,Y)
            ^